* 0.6.5svn - ... - released 21/04/2007
- Removed SwapCached from the Cached counter. (Peter Rabbitson)
- Fixed a file descriptor problem on kernel 2.4. (Liviu Daia)
- Install manpage as part of the make install phase. (Scott Baker)
- Use SIG_IGN instead of SIG_DFL to disable alarm signal.

* 0.6.5 - Torrox - released 17/04/2007
- Added VMware ESX plugins (Bert de Bruijn)
- Added tcp6 and udp6 statistics within dstat_tcp and dstat_udp
- Added module readlines() taking care of seek() and multiple files
- Improved module exception messages
- Fixed a problem with strings and CSV output in dstat_time and dstat_app (Vinod Kutty)
- Removed broken dstat_clock plugin (use dstat_time or dstat_epoch)
- Disabled the generic exception handling of OSError and IOError to force a stacktrace (supastuff@freenode)

* 0.6.4 - Ahoy - released 12/12/2006
- Fixed dstat_clock to use localtime() instead of gmtime()
- Added external plugin dstat_vz for openvz cpu statistics
- Removed the underscoring of the counter titles
- Added underlining for the counter titles
- Do not return md and dm devices during disk discovery
- Renamed dstat_time plugin to dstat_epoch (-T/--epoch)
- Moved dstat_clock plugin into main dstat program as dstat_time (-t/--time)

* 0.6.3 - Amsterdam - released 26/06/2006
- Changed default (silver) color of delimiter to gray
- Fixed sum() and enumerate() only when it isn't there (Jesse Young)
- Added external plugins dstat_app
- Added ibm-acpi support to dstat_thermal
- Exclude md-devices from total
- Improved debug output somewhat
- Fixed a battery plugin bug (Christophe Vandeplas)
- Added individual swap monitoring (-s with -S)
- Small performance improvements
- Raise module exceptions when --debug is invoked
- Removed the memory-leaking curses implementation (supastuff@freenode)
- Added dist, rpm and srpm targets to Makefile
- Moved documentation to asciidoc at last

* 0.6.2 - Cumbernauld - released 08/03/2006