@@ -1626,24 +1626,53 @@ def sysfs_dev(device):
 		return 'sdX'
 	return device
 
-def scsi_dev(nr):
-	"Convert sequential number into scsi device names"
-	if nr < 26:
-		return 'sd' + chr(ord('a') + nr)
-	else:
-		return 'sd' + chr(ord('a') - 1 + nr / 26) + chr(ord('a') + nr % 26)
-
 def dev(maj, min):
 	"Convert major/minor pairs into device names"
-	scsi = [8, 65, 66, 67, 68, 69, 70, 71, 128, 129, 130, 131, 132, 133, 134, 135]
+	ram = [1, ]
 	ide = [3, 22, 33, 34, 56, 57, 88, 89, 90, 91]
+	loop = [7, ]
+	scsi = [8, 65, 66, 67, 68, 69, 70, 71, 128, 129, 130, 131, 132, 133, 134, 135]
+	md = [9, ]
+	ida = [72, 73, 74, 75, 76, 77, 78, 79]
+	ubd = [98,]
+	cciss = [104,]
+	dm =  [253,]
 	if maj in scsi:
-		nr = scsi.index(maj) * 16 + min
-#		nr = scsi.index(maj) * 16 + min / 16
-		return scsi_dev(nr)
+		disc = chr(ord('a') + scsi.index(maj) * 16 + min / 16)
+		part = min % 16
+		if not part: return 'sd%s' % disc
+		return 'sd%s%d' % (disc, part)
 	elif maj in ide:
-		nr = ide.index(maj) * 2 + min / 64
-		return 'hd' + chr(ord('a') + nr)
+		disc = chr(ord('a') + ide.index(maj) * 2 + min / 64)
+		part = min % 64
+		if not part: return 'hd%s' % disc
+		return 'hd%s%d' % (disc, part)
+	elif maj in dm:
+		return 'dm-%d' % min
+	elif maj in md:
+		return 'md%d' % min
+	elif maj in loop:
+		return 'loop%d' % min
+	elif maj in ram:
+		return 'ram%d' % min
+	elif maj in cciss:
+		disc = cciss.index(maj) * 16 + min / 16
+		part = min % 16
+		if not part: return 'c0d%d' % disc
+		return 'c0d%dp%d' % (disc, part)
+	elif maj in ida:
+		cont = ida.index(maj)
+		disc = min / 16
+		part = min % 16
+		if not part: return 'ida%d-%d' % (cont, disc)
+		return 'ida%d-%d-%d' % (cont, disc, part)
+	elif maj in ubd:
+		disc = ubd.index(maj) * 16 + min / 16
+		part = min % 16
+		if not part: return 'ubd%d' % disc
+		return 'ubd%d-%d' % (disc, part)
+	else:
+		return 'dev%d-%d' % (maj, min)
 
 #def mountpoint(dev):
 #	"Return the mountpoint of a mounted device/file"
